api/v1/envoy.yaml

admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 50001 }

static_resources:
  listeners:
    - name: listener1
      address:
        socket_address: { address: 0.0.0.0, port_value: 51051 }
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              config:
                stat_prefix: grpc_json
                codec_type: AUTO
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ['*']
                      routes:
                        - match: { prefix: '/dio.hellogrpcweb' }
                          route: { cluster: hello-api }
                        - match: { prefix: '/' }
                          route: { cluster: hello-ui }
                http_filters:
                  - name: envoy.grpc_web
                  - name: envoy.grpc_json_transcoder
                    config:
                      proto_descriptor: 'hello.descriptor'
                      services:
                        - dio.hellogrpcweb.v1.YAMLService
                      print_options:
                        add_whitespace: true
                        always_print_primitive_fields: true
                        always_print_enums_as_ints: false
                        preserve_proto_field_names: false
                  - name: envoy.router

  clusters:
    - name: hello-api
      connect_timeout: 0.25s
      type: STRICT_DNS
      http2_protocol_options: {}
      hosts:
        - socket_address:
            address: localhost
            port_value: 9901
    - name: hello-ui
      connect_timeout: 0.25s
      type: STRICT_DNS
      hosts:
        - socket_address:
            address: localhost
            port_value: 8080
